<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    >


     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llTela"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textStyle="bold|italic"
                android:text="@string/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bolinha"
                />

            <EditText
                android:id="@+id/etNome"
                android:hint="@string/digite_seu_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/sobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etSobrenome"
                android:hint="@string/digite_seu_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/idade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etIdade"
                android:inputType="number"
                android:hint="@string/digite_sua_idade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/rgSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMasculino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textColor="#0000FF"
                    android:layout_weight="1"
                    />

                <RadioButton
                    android:id="@+id/rbFeminino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feminino"
                    android:textColor="#FF0000"
                    android:layout_weight="1"/>
            </RadioGroup>
            <Button
                android:id="@+id/btSalvar"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar"
                android:onClick="clicouNoBotao"/>

            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ivFotografia"/>

            <Button
                android:id="@+id/btTirarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tirar_foto"
                android:onClick="clicouNoBotaoTirarFoto"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obter_dos_contatos"
                android:onClick="clicouNoContato"/>

            <Button
                android:id="@+id/btMostrarTodos"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mostrar_todos"
                android:onClick="clicouNoBotaoMostrarTodos"/>

            <Button
                android:id="@+id/btPrevisaoTempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempo_por_cidade"
                android:onClick="clicouNoBotaoPrevisaoTempo"/>
        </LinearLayout>

    </ScrollView>



</LinearLayout>
